@@ -1,46 +1,0 @@
-Installing this software constitutes your acceptance of the terms
-and conditions of the license agreement. Please read the license
-agreement before installation. Any previous review and benchmark
-test provisions are suspended and supplemented by item #2 below.
-Other rules and regulations of installing this software are:
-
-   1. The product can not be rented, loaned or leased - You are
-   the sole owner of the product.
-
-   2. McAfee updates its products frequently and performance data
-   for its products change. Before conducting benchmark tests
-   regarding this product, contact McAfee to verify that you possess
-   the correct product for the test and the then current version
-   and edition of the product. Benchmark tests of former, outdated
-   or inappropriate versions or editions of the product may yield
-   results that are not reflective of the performance of the current
-   version or edition of the product.
-
-   3. No liability for consequential damages. In no event shall
-   McAfee or its suppliers be liable to you for any consequential,
-   special, incidental, or indirect damages of any kind arising
-   out of the delivery, performance, or use of the software. Even
-   if McAfee has been advised of the possibility of such damages.
-   In no event will McAfee's liability for any claim, whether in
-   contract, tort, or any other theory of liability, exceed the
-   license fee paid by you, if any.
-
-   4. The software you requested includes cryptographic technology
-   that is subject to export controls under U.S. Export Administration
-   Regulations and diversion contrary to U.S. law is prohibited.
-   The software may not be used or transferred for use in any
-   nuclear, chemical or biological weapons, or missile technology
-   end-uses unless authorized by the U.S. Government by regulation
-   or specific license. It may also be subject to import and/or
-   use regulations in foreign countries. For more information on
-   the U.S. Export Administration Regulations ("EAR"), 15 C.F.R.
-   Parts 730-774, and the Bureau of Export Administration ("BXA"),
-   please see the BXA homepage.
-
-For more information about McAfee and our products, please visit
-our home page at www.mcafee.com or call 1-800-338-8754.
-
-This product is a time-limited version for evaluation purposes
-only. Customers who subsequently purchased licensed software will
-need to first uninstall the evaluation version prior to installation
-of the fully licensed product.
