@@ -1,11 +1,0 @@
-#!/bin/sh
-#
-# $NetBSD: DEINSTALL,v 1.1 2002/08/07 05:42:13 jlam Exp $
-
-UVSCANDIR=@UVSCANDIR@
-
-case ${STAGE} in
-POST-DEINSTALL)
-	${RM} -rf ${UVSCANDIR}
-	;;
-esac
