@@ -1,11 +1,0 @@
-uvscan is an evaluation VirusScan running on NetBSD under Linux
-emulation.
-
-        THIS IS AN EVALUATION COPY OF THIS SOFTWARE.
-        You may use this software for only thirty (30)
-        days, after which period you must either buy
-        the software from Network Associates, Inc. or
-        stop using it and remove it from your computer.
-
-Please see ${PREFIX}/share/doc/uvscan/license.txt for more
-information.
