@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.1931 2019/05/02 08:49:36 wiz Exp $
+$NetBSD: CHANGES-2019,v 1.1932 2019/05/02 08:53:00 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -3122,3 +3122,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated www/py-hyperframe to 5.2.0 [adam 2019-05-02]
 	Removed print/acroread9 [wiz 2019-05-02]
 	Removed sysutils/memconf [wiz 2019-05-02]
+	Removed security/uvscan [wiz 2019-05-02]
